--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.navigation.NavigationView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_graph"
-    app:startDestination="@id/mainActivity">
-
-    <activity
-        android:id="@+id/mainActivity"
-        android:name="com.example.suzai.MainActivity"
-        android:label="activity_main"
-        tools:layout="@layout/activity_main" />
+    app:startDestination="@id/mainFragment">
     <fragment
-        android:id="@+id/numberOfConsciousnessFragment"
-        android:name="com.example.suzai.NumberOfConsciousnessFragment"
-        android:label="fragment_number_of_consciousness_fragment"
-        tools:layout="@layout/fragment_number_of_consciousness_fragment" />
+        android:id="@+id/mainFragment"
+        android:name="com.example.suzai.fragments.MainFragment"
+        android:label="main_fragment"
+        tools:layout="@layout/main_fragment" >
+        <action
+            android:id="@+id/action_mainFragment_to_consciousnessInfoFragment"
+            app:destination="@id/consciousnessInfoFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_missionInfoFragment"
+            app:destination="@id/missionInfoFragment" />
+    </fragment>
     <fragment
-        android:id="@+id/missionFragment"
-        android:name="com.example.suzai.MissionFragment"
+        android:id="@+id/missionInfoFragment"
+        android:name="com.example.suzai.fragments.MissionInfoFragment"
         android:label="fragment_mission"
         tools:layout="@layout/fragment_mission" />
     <fragment
         android:id="@+id/consciousnessInfoFragment"
-        android:name="com.example.suzai.ConsciousnessInfoFragment"
+        android:name="com.example.suzai.fragments.ConsciousnessInfoFragment"
         android:label="ConsciousnessInfoFragment" />
-</com.google.android.material.navigation.NavigationView>
+</navigation>
